# qt-samples

./: .gitignore  CMakeLists.txt  README.md
sample-1/: CMakeLists.txt  main.cpp
sample-1.3/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
sample-1.6/: main.cpp  widget.cpp
sample-3/: CMakeLists.txt  widget.h  widget.ui
sample-3.1/: main.cpp
sample-3.10/: CMakeLists.txt  main.cpp
sample-3.11/: CMakeLists.txt  main.cpp
sample-3.12/: CMakeLists.txt  main.cpp
sample-3.13/: CMakeLists.txt  main.cpp
sample-3.14/: CMakeLists.txt  main.cpp
sample-3.2/: CMakeLists.txt  main.cpp
sample-3.3/: main.cpp
sample-3.4/: CMakeLists.txt  main.cpp
sample-3.5/: CMakeLists.txt  main.cpp
sample-3.6/: CMakeLists.txt
sample-3.9/: CMakeLists.txt  main.cpp
sample-4.1/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
sample-4.12/: main.cpp  (+3 more)
sample-5.10/: CMakeLists.txt
sample-5.10/5_10_QToolBox/: main.cpp
sample-5.10/5_10_SIGNAL/: widget.cpp  widget.h
sample-5.10/5_10_icon/: main.cpp
sample-5.10/5_10_insertItem/: widget.cpp
sample-5.10/5_10_setCurrentIndex/: widget.cpp  widget.h
sample-5.10/5_10_setCurrentWidget/: widget.cpp
sample-5.10/5_10_setItemEnabled/: widget.cpp
sample-5.10/5_10_setItemIcon/: main.cpp  widget.cpp  widget.h
sample-5.10/5_10_setItemText/: widget.cpp
sample-5.10/5_10_setItemToolTip/: widget.cpp
sample-5.11/: CMakeLists.txt
sample-5.11/5_11_QSplitter/: main.cpp
sample-5.11/5_11_SIGNAL/: widget.cpp  widget.h
sample-5.11/5_11_insertWidget/: widget.cpp  widget.h
sample-5.11/5_11_saveState/: widget.cpp  widget.h
sample-5.11/5_11_setChildrenCollapsible/: widget.cpp
sample-5.11/5_11_setCollapsible/: main.cpp  widget.cpp
sample-5.11/5_11_setHandleWidth/: widget.cpp
sample-5.11/5_11_setOpaqueResize/: widget.cpp  widget.h
sample-5.11/5_11_setSizes/: widget.cpp
sample-5.11/5_11_setStretchFactor/: widget.cpp
sample-5.12/: CMakeLists.txt
sample-5.12/5_12_QScrollArea/: main.cpp
sample-5.12/5_12_ScrollBarPolicy/: main.cpp
sample-5.12/5_12_ensureVisible/: main.cpp
sample-5.12/5_12_ensureWidgetVisible/: main.cpp
sample-5.12/5_12_setAlignment/: main.cpp
sample-5.12/5_12_setWidgetResizable/: main.cpp
sample-5.2/: CMakeLists.txt
sample-5.2/5_2_AlignAbsolute/: main.cpp
sample-5.2/5_2_HAlignment/: main.cpp
sample-5.2/5_2_QHBoxLayout/: main.cpp
sample-5.2/5_2_QVBoxLayout/: main.cpp
sample-5.2/5_2_VAlignment/: main.cpp
sample-5.2/5_2_addLayout/: main.cpp
sample-5.2/5_2_addSpacing/: main.cpp
sample-5.2/5_2_addStretch/: main.cpp
sample-5.2/5_2_addWidget/: main.cpp
sample-5.2/5_2_insertLayout/: main.cpp
sample-5.2/5_2_insertSpacing/: main.cpp
sample-5.2/5_2_insertStretch/: main.cpp
sample-5.2/5_2_insertWidget/: main.cpp
sample-5.2/5_2_removeWidget/: main.cpp
sample-5.2/5_2_setDirection/: main.cpp
sample-5.2/5_2_setSpacing/: main.cpp
sample-5.3/: CMakeLists.txt
sample-5.3/5_3_QGridLayout/: main.cpp
sample-5.3/5_3_QGridLayout_columnSpan/: main.cpp
sample-5.3/5_3_QGridLayout_rowSpan/: main.cpp
sample-5.3/5_3_addLayout/: main.cpp
sample-5.3/5_3_addWidget/: main.cpp
sample-5.3/5_3_setColumnMinimumWidth/: main.cpp
sample-5.3/5_3_setColumnStretch/: main.cpp
sample-5.3/5_3_setHorizontalSpacing/: main.cpp
sample-5.3/5_3_setRowMinimumHeight/: main.cpp
sample-5.3/5_3_setVerticalSpacing/: main.cpp
sample-5.4/: CMakeLists.txt
sample-5.4/5_4_AllNonFixedFieldsGrow/: main.cpp
sample-5.4/5_4_ExpandingFieldsGrow/: main.cpp
sample-5.4/5_4_FieldsStayAtSizeHint/: main.cpp
sample-5.4/5_4_QFormLayout/: main.cpp
sample-5.4/5_4_WrapAllRows/: main.cpp
sample-5.4/5_4_WrapLongRows/: main.cpp
sample-5.4/5_4_addRow/: main.cpp
sample-5.4/5_4_insertRow/: main.cpp
sample-5.4/5_4_setFormAlignment/: main.cpp
sample-5.4/5_4_setHorizontalSpacing/: main.cpp
sample-5.4/5_4_setLabelAlignment/: main.cpp
sample-5.5/: CMakeLists.txt
sample-5.5/5_5_QStackedLayout/: main.cpp  widget.cpp  widget.h
sample-5.5/5_5_QStackedWidget/: main.cpp  widget.cpp  widget.h
sample-5.6/: CMakeLists.txt
sample-5.6/5_6_Expanding/: main.cpp
sample-5.6/5_6_Expanding2/: main.cpp
sample-5.6/5_6_Fixed/: main.cpp
sample-5.6/5_6_Maximum/: main.cpp
sample-5.6/5_6_Minimum/: main.cpp
sample-5.6/5_6_Minimum2/: main.cpp
sample-5.6/5_6_MinimumExpanding/: main.cpp
sample-5.6/5_6_MinimumExpanding2/: main.cpp
sample-5.6/5_6_Preferred/: main.cpp
sample-5.7/: CMakeLists.txt
sample-5.7/5_7_QGroupBox/: main.cpp
sample-5.7/5_7_setAlignment/: main.cpp
sample-5.7/5_7_setCheckable/: main.cpp
sample-5.7/5_7_setFlat/: main.cpp
sample-5.7/5_7_toggled/: main.cpp
sample-5.8/: CMakeLists.txt
sample-5.8/5_8_Box/: main.cpp
sample-5.8/5_8_HLine/: main.cpp
sample-5.8/5_8_Panel/: main.cpp
sample-5.8/5_8_StyledPanel/: main.cpp
sample-5.8/5_8_VLine/: main.cpp
sample-5.8/5_8_WinPanel/: main.cpp
sample-5.8/5_8_setLineWidth/: main.cpp
sample-5.8/5_8_setMidLineWidth/: main.cpp
sample-5.9/: CMakeLists.txt
sample-5.9/5_9_ElideLeft/: widget.cpp  widget.h
sample-5.9/5_9_ElideMiddle/: widget.cpp
sample-5.9/5_9_ElideNone/: widget.cpp
sample-5.9/5_9_ElideRight/: widget.cpp
sample-5.9/5_9_QTabWidget/: main.cpp
sample-5.9/5_9_SIGNAL/: widget.cpp  widget.h
sample-5.9/5_9_icon/: main.cpp
sample-5.9/5_9_insertTab/: widget.cpp
sample-5.9/5_9_setCurrentIndex/: widget.cpp
sample-5.9/5_9_setCurrentWidget/: widget.cpp
sample-5.9/5_9_setDocumentMode/: widget.cpp
sample-5.9/5_9_setMovable/: widget.cpp
sample-5.9/5_9_setTabBarAutoHide/: widget.cpp  widget.h
sample-5.9/5_9_setTabEnabled/: widget.cpp
sample-5.9/5_9_setTabIcon/: widget.cpp
sample-5.9/5_9_setTabPosition_East/: widget.cpp
sample-5.9/5_9_setTabPosition_South/: widget.cpp  widget.h
sample-5.9/5_9_setTabPosition_West/: widget.cpp
sample-5.9/5_9_setTabShape/: widget.cpp
sample-5.9/5_9_setTabText/: main.cpp  widget.cpp
sample-5.9/5_9_setTabToolTip/: main.cpp  widget.cpp
sample-5.9/5_9_setTabVisible/: widget.cpp
sample-5.9/5_9_setTabsClosable/: widget.cpp  widget.h
sample-5.9/5_9_setUsesScrollButtons/: widget.cpp
(+52 files in other folders)
